--- a/foot.ini
+++ b/foot.ini
@@ -1,15 +1,15 @@
 
 # -*- conf -*-
 
-# shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
-# term=foot (or xterm-256color if built with -Dterminfo=disabled)
+shell="/bin/bash"
+term=xterm-256color 
 # login-shell=no
 
 # app-id=foot # globally set wayland app-id. Default values are "foot" and "footclient" for desktop and server mode
 # title=foot
 # locked-title=no
 
- font=monospace:size=15
+font=monospace:size=15
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -73,30 +73,30 @@
 
 [colors]
 # alpha=1.0
- background=242424
+ background=141424
  foreground=ffffff
 # flash=7f7f00
 # flash-alpha=0.5
 
 ## Normal/regular colors (color palette 0-7)
-# regular0=242424  # black
-# regular1=f62b5a  # red
-# regular2=47b413  # green
-# regular3=e3c401  # yellow
-# regular4=24acd4  # blue
-# regular5=f2affd  # magenta
-# regular6=13c299  # cyan
-# regular7=e6e6e6  # white
+ regular0=242424  # black
+ regular1=f62b5a  # red
+ regular2=47b413  # green
+ regular3=e3c401  # yellow
+ regular4=24acd4  # blue
+ regular5=f2affd  # magenta
+ regular6=13c299  # cyan
+ regular7=e6e6e6  # white
 
 ## Bright colors (color palette 8-15)
-# bright0=616161   # bright black
-# bright1=ff4d51   # bright red
-# bright2=35d450   # bright green
-# bright3=e9e836   # bright yellow
-# bright4=5dc5f8   # bright blue
-# bright5=feabf2   # bright magenta
-# bright6=24dfc4   # bright cyan
-# bright7=ffffff   # bright white
+ bright0=616161   # bright black
+ bright1=ff4d51   # bright red
+ bright2=35d450   # bright green
+ bright3=e9e836   # bright yellow
+ bright4=5dc5f8   # bright blue
+ bright5=feabf2   # bright magenta
+ bright6=24dfc4   # bright cyan
+ bright7=ffffff   # bright white
 
 ## dimmed colors (see foot.ini(5) man page)
 # dim0=<not set>
@@ -112,7 +112,7 @@
 # selection-foreground=<inverse foreground/background>
 # selection-background=<inverse foreground/background>
 # jump-labels=<regular0> <regular3>          # black-on-yellow
- scrollback-indicator=<regular0> <bright4>  # black-on-bright-blue
+scrollback-indicator=242424 5dc5f8  # black-on-bright-blue
 # search-box-no-match=<regular0> <regular1>  # black-on-red
 # search-box-match=<regular0> <regular3>     # black-on-yellow
 # urls=<regular3>
@@ -219,4 +219,3 @@
 # select-row=BTN_LEFT-4
 
 # vim: ft=dosini
-
