ricing my sway configs

--- a/foot.ini
+++ b/foot.ini
@@ -72,8 +72,8 @@ font=monospace:size=15
 
 
 [colors]
-# alpha=1.0
- background=141424
+ alpha=0.95
+ background=101020
  foreground=ffffff
 # flash=7f7f00
 # flash-alpha=0.5
