--- a/config
+++ b/config
@@ -224,24 +224,22 @@ bar {
     colors {
         statusline #ffffff
         background #111111
-        inactive_workspace #32323200 #32323200 #5c5c5c
+        inactive_workspace #aaaaaa #32323200 #aaaaaa
+	active_workspace #aaaaaa #ffaaaa #aaaaaa
     }
 }
 
 
 #### Volume controls
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-rindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
 
-### Get weather report
-
-bindsym $mod+m exec foot --hold -e curl wttr.in/starkville
 
 set $cl_high #000000
 set $cl_indi #ffffff
-set $cl_back #ffffff
-set $cl_fore #d9d8d8
+set $cl_back #343434
+set $cl_fore #ffffff
 set $cl_urge #ee2e24
 
 
