--- a/kitty.conf
+++ b/kitty.conf
@@ -17,7 +17,12 @@ map f4 launch --location=split
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family     Hack Mono
+font_family Hack Mono
+bold_font Hack
+italic_font Hack
+bold_italic_font Hack
+hinting full
+antialiasing true
 # font_family      MesloLGS NF
 # bold_font        auto
 # italic_font      auto
