Update terminal font

--- a/foot.ini
+++ b/foot.ini
@@ -2,14 +2,16 @@
 # -*- conf -*-
 
 shell="/bin/bash"
-term=xterm-256color 
+term=xterm-256color
 # login-shell=no
 
 # app-id=foot # globally set wayland app-id. Default values are "foot" and "footclient" for desktop and server mode
 # title=foot
 # locked-title=no
 
-font=monospace:size=14
+#font = DejaVu Sans Mono:pixelsize=24
+font = Terminus:pixelsize=24
+
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -67,13 +69,13 @@ font=monospace:size=14
 # underline-thickness=<font underline thickness>
 
 [mouse]
-# hide-when-typing=no
+hide-when-typing=yes
 # alternate-scroll-mode=yes
 
 
 [colors]
  alpha=1
- background=101520
+ background=000000
  foreground=ffffff
 # flash=7f7f00
 # flash-alpha=0.5
