--- a/config
+++ b/config
@@ -6,7 +6,7 @@
 
 ### Variables
 #
-font pango:Hack 12
+font Terminus 12
 
 # Use Mod1 for Alt.
 set $mod Mod1
@@ -215,7 +215,7 @@ bindsym $mod+r mode "resize"
 
 bar {
     position top
-    font Hack
+    font Terminus
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
